<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/rowCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="5dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/userPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginVertical="8dp"
                android:contentDescription="@string/user_pic"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/name"
                app:layout_constraintStart_toEndOf="@+id/userPic"
                app:layout_constraintTop_toTopOf="@+id/userPic" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                tools:text="Eric gacoki" />

            <TextView
                android:id="@+id/userAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_item"
                app:layout_constraintBottom_toBottomOf="@+id/userPic"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="1" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/userAge"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/userAge"
                app:layout_constraintVertical_bias="1.0"
                tools:text="19" />

            <View
                android:id="@+id/view"
                android:layout_width="0.1dp"
                android:layout_height="0dp"
                android:background="#986"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@id/userAge"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>