<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:context=".fragments.add.AddFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:endIconCheckable="true"
                app:helperTextEnabled="true"
                app:helperText="*"
                app:helperTextTextColor="#D37575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:endIconCheckable="true"
                app:helperTextEnabled="true"
                app:helperText="*"
                app:helperTextTextColor="#D37575"
                app:layout_constraintEnd_toEndOf="@id/layFirstName"
                app:layout_constraintStart_toStartOf="@id/layFirstName"
                app:layout_constraintTop_toBottomOf="@id/layFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layAge"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                app:counterEnabled="true"
                app:counterMaxLength="2"
                app:endIconCheckable="true"
                app:helperText="*"
                app:helperTextEnabled="true"
                app:endIconMode="clear_text"
                app:endIconTint="#456"
                app:helperTextTextColor="#D37575"
                app:layout_constraintEnd_toEndOf="@id/layLastName"
                app:layout_constraintStart_toStartOf="@id/layLastName"
                app:layout_constraintTop_toBottomOf="@id/layLastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:src="@drawable/ic_done"
                android:layout_marginVertical="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/layAge"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/layAge"
                app:layout_constraintTop_toBottomOf="@+id/layAge"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/fab_ok" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>